--- a/HTML/Udemy_course/intro.html
+++ b/HTML/Udemy_course/intro.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
 	<head>
-    	<title>Floats</title>
+    	<title>Page Title</title>
+
         <style type="text/css">   
 			#left {
             	float:left;
@@ -13,8 +14,17 @@
             	clear:both;
             }
         </style>
-        </head>
+
+    </head>
     <body>
+        <h1>My First Heading</h1>
+        <a href="https://www.w3schools.com">This is a link</a>
+        <hr>
+        <h2 style="background-color:Tomato;">This is heading 2</h2>
+        <p style="color:red;">This is some other text.</p>
+        <img src="test.jpg" alt="W3Schools.com" width="104" height="142">
+
+
     	<div id="background">
     		<p id="left">This is a paragraph</p>
         	<p id="right">This is another paragraph.</p>
